--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:htx1GLOx,iv:Uyqu0StFgiuuftPAlzrEB6f/HCqoBf9GwxVgVcB6uPI=,tag:vBO1AdFZ/Xs4WS4LBZRWqg==,type:str]
-ansible_user: ENC[AES256_GCM,data:1T0j1eLS,iv:HvrE0x5kZ1ESQSNzK1StOYBqyhVWmIZqJt15oyhYe0E=,tag:rijK4H20NXNIm17LD/te+Q==,type:str]
+kind: ENC[AES256_GCM,data:lsUjNpno,iv:E8xkXIr/VIHVL5A3a7Q5lP0FEqrEmXgYSuMpivKS6l8=,tag:hXQhcdJK7UFTHWmZ2VaWlA==,type:str]
+ansible_user: ENC[AES256_GCM,data:ImvS7W/F,iv:OW1DLjeSNooNKI7aTbRGyqE6KlpVOnW69eURReNncVQ=,tag:ig6sDXGYHoo7LKDl3o93Ew==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYTS8xTE1KckM2RFQrZGJo
-            SW1MMjgzeVpoQ2did2NTUFFuVmVKeDlvQUJvCk83QTN1MmFTNjVXU1diQzN1T1lQ
-            Y3JDQW84a1c0anpmUVczUkNRN1ZpOVkKLS0tIDhBdnlmU1BJN2xXK04rdDBqZ3Fp
-            NFhUL2taMTc4aDd1UWRwVHZTSUVQaFkK0LhJffC6hS1oYIQ/jk79lzENjj7FrNb3
-            N+IF/XJiJPkq++4d+lDJlbbWi4z1As3ByPNj5/tAYIulhl4E7pxCkw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJWUNmQW9WdExOSXhKVHJN
+            Q0Rpa0JxaTUvSWZySkFvZE9wTHUvcWRQY1gwClV1azhOZHJidFNQZGVUekRtWWEz
+            RElobjFPanhvMkdPY1JkRm1rby9lT2sKLS0tIExWNnlLN2d0amZUcC9hVENaRkI3
+            RE9JWHdXa2Fzd0FCK0MrUVJCYUF6ZnMKkKzzgGtw08ezjHxTG7PVaS13VuqXYWds
+            m76Clfx17cr5bgqU9N4jkII2/9Os52JuA7hdgeN9Bo9+zGdwgdwDQg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T03:36:47Z"
-    mac: ENC[AES256_GCM,data:KYTLCnxmFLvJtnFTfZ6Wn3Ni3ky+sdOp4rk2JFyoKAhjvVkmrSy0LmArl20rT2934gBwJqpGCQ1c1PbeEfusdKycfTaei6xua7O5VciiTV4vcCcBLonsv54hg/ZHLsjoUISDaOO+TCvppK/Km35mD8up3oDL0GuKodUAOMbTvL8=,iv:H09lxX5P/jl1rCb+PCSfJIBtLKuG36T9pa7UdVPOfuc=,tag:h6P5LF6ggvQifjhIb/523g==,type:str]
+    lastmodified: "2023-03-16T04:15:11Z"
+    mac: ENC[AES256_GCM,data:ECYurc6oYe8r5a++5yuPWvsK5GP9Fq4Bk+dB/sDXRcMIfRhUvW8KxHTeUPFFYubABEeYdEVGVp9CMB5zywwfjJVnM2dPv77UMyfrAWHsGNmtyA92LEOu0TvvPu3pRYpoV8nTSlyBxDEp/fxTDoS7R8BKIaMX5Ki50eYy6kze0x0=,iv:xgbk7Ogjz5a3VhykNhqUW8TFrWkwY37L52KMmjJieRU=,tag:10juTLbF6kJbt/fXs8RGKA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
