--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:yWfzp2St,iv:zeofPBsWw/Y6z+oELuZUiAUqYvi5dZzhzq+HH4MEhU8=,tag:rAh1GG+1ochvxZLUKbwrQg==,type:str]
-ansible_user: ENC[AES256_GCM,data:2WiOW2kC,iv:fNGiPX6qIM/8D+fyGYZwn+5zUezBUxQJIPABnYH0yms=,tag:qxYzxX08x/XMz0ImYx80+g==,type:str]
+kind: ENC[AES256_GCM,data:L/yRYrl0,iv:S16ZFCtS33CpLA7ewLbc9OsnU1FvoRLRgrFzNdMvp1A=,tag:IX5bWrJ+Jv8ZWB5E+cVXxw==,type:str]
+ansible_user: ENC[AES256_GCM,data:8qMf5SKL,iv:06v6Q70rd+OxKiOXEAZv/Brvxl4iTmAYKeNfuyjjq1w=,tag:dPw86XGa0YIs22mqVYsycw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxTFZSaG02YWtOS2hJZVNm
-            cHZvTmFBb0pOVENLNTRtVVMvV2JWMmF6aUhFCi9nQVVrZ2kxVFNkejhmbklKd1F5
-            TGNTYXA3M2kzVTk0dllGUlUveVI0U3cKLS0tIFQrRmFWSEIxTjBFcllTYUtoSHMv
-            d1gxKy9nenJkUWNwY05jYjE0anlhOE0K44qSGhS/ZtXkTvQwq1oRU8UVCbBlQrBq
-            Jw+fmzVbR++AXbXrnKH7P7Mhlw4wCOUmjbi6oTVtF09/Bl60p+zv/A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpMVhzdWhlV05sL2p2cFZR
+            bDdKUEtZNXBObmlpeExIOUIvdFp3Z2xDb1dRCmxTUU1SbnI1RTFXajRLMHJuQkJB
+            ZGlGZGhTQmZsYXN3eEFWQkVHRmhNUlUKLS0tIDNrZDJoRlZGV0p6MEtZWEU1emVl
+            ZFh6K1pWQUxlWXllWDRFVk05OUdwSlkKWGXleo7CG6FFhBdlJ3TZx8nL5qkWxKi2
+            dJmnlkmL1B1oSBC0kX2rMt/M/HkwACZVbNQQkrOjmIhAqJSLQ5bAJA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T03:36:47Z"
-    mac: ENC[AES256_GCM,data:89B70PcRD+UtMTubfpzQceJRHCdrAXgFuxVk0m9Ckn7kXECPNY3jRk3bSqiUVxgwCH5e1lHpXYW7uZuD5eWEEjGnUasmTB9gols2Ltxo8o3QJ0yoOYTzHm06XJeDQtLwBW85SUM5CJkgCDjWjEvBRqaGJHgrlqA+MCMiMhalcuI=,iv:QzN9HZTt/lsL4jMCn2ljVOO51JevbDRaJitvbl87f+A=,tag:WG2lmqMrstzGb3CXuUsV+g==,type:str]
+    lastmodified: "2023-03-16T04:15:11Z"
+    mac: ENC[AES256_GCM,data:7UN+tr7AQCgGYyDkpDyzVlE6MGlh4GmZrF6x7UoY23Bf/Mw3ExzMhIEUxvVDKHbCS+/RRoQNGdJah/Z8l7k+LhIb7aOkU1j8hKb6+0UHURhGj4sts4HyhjbqLFy11lKDKIqR6dXJdzQm1iCT5FquPGGr8io20mbd8VyaA4vbzes=,iv:Mo0h7N6vhn9+ZcwJPlS6dYPdS50fbkbs8nWAVssYpoI=,tag:qu8CulblBfUOkKtMdqrIJQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
