--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:aCupD0/3,iv:Y8qRQfzIzfQNEP4locGFa4Vi1cRGDAoTKrjvZXOLi34=,tag:Lp6aCBNpkEWIe0ol2xzfqA==,type:str]
-ansible_user: ENC[AES256_GCM,data:E9ndD6zx,iv:GxVOUSTNNHWLXh3IBCSvFuj9NNd7Plt7JsInZHSOEz8=,tag:p9oG8/YfCAHjMyzdRNHAuw==,type:str]
+kind: ENC[AES256_GCM,data:/3FsTh/Z,iv:uSq80Q3tdvtUDKiiM/smQgdK+cFrZxBQj/tNBK3B4I0=,tag:MnXAN3L4Mn3bYbJXY1bzCQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:DrEQZFLC,iv:FzPM4sEasN4sgZIQeJT2FHHAI2qoTqyzj4Z8X23ZXxg=,tag:rqxn4wguVxuHkz1E2Kb1sg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMUzY2Qm91SEVFVWZBV2lW
-            MUZxL01YZE9pNnhhMmpEUEpJTjRSdUtFUmljCi95SFNNVkhObU5wM0hDV0xpdmV3
-            QU1udjlmT1l2TEZlSTR3N0VJZXFrT0UKLS0tIGNTTFl3TDVpc3NWVEQrMlJEcGJh
-            ZjFjOWY5RHNZM2R4U0hMQXlpYjZlT28KwoyqvMnN7AJOuTgw9S/0gzvQoFt9SVVE
-            OUqV0wYAYNDYikixYPAqVDrBB//ppqhp2MXb2mMSEv5+LxEnEZhVSg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5TEQ0elBFVER6UXZuQkdD
+            bk5LVndBOXZmNitKMWF0WlNmeHJvUFBtOUY4CjREV0Q1aVFKTkNleUlhK1dlREUy
+            ZysxUnNlRnc0Yjhxa0Y4MWp5c0NUeEUKLS0tIFlkb2Rhc014UXZHTHZKZWVKWERQ
+            SmpRRXRzYkhPbVFBcTRqeGZlR2dSOWMKHMW+koUCHBl/xhxU6OoM1sePZe5kGQUO
+            1lTV9TTRoQ8ZYcC+oIRo+lxkfOBSOgHE2MzDLgipIL3Y+oXR0xXhGg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T03:36:47Z"
-    mac: ENC[AES256_GCM,data:D8yy9ewikCxga1ApEHLrHjzB3H4G1A5xW/MvsV3ta1n+l4f/1n34yDC+86/zXHmWgqetzfCcy8WD8NP6EUXtkc73BfkULldxvXzUgX9IZLpO9+Z8WsMDo3d6zc2jlvoHff4A6U5Ys0a6ejPqkwLVhYO18nKgRHdZcgceD+tCaDg=,iv:j6rhCYoKuRIQUiBf2x7OGktBoGwehZAHEJmkoG9h/2g=,tag:9lWIoQrwhuuD5MPk3FfIEg==,type:str]
+    lastmodified: "2023-03-16T04:15:11Z"
+    mac: ENC[AES256_GCM,data:1tjLa0xOs5tNKWE8UsXAez6EMqLAtHaD5R+zF5dpyGAWE/w93uJaloQYZfDPYWmGL3fu0MbEEyrNY7FYb/YynQQD+1bSXaf51LnspL012fupPam0d1jpo4p/bxNrTz19bMxCXH9GJqjee0FyXdIBrxUSTA72qwLFUlcXfCE4LKk=,iv:MHttgo3axTwKauRPN1idDh4FhjiSWqCV8CmxHAWF0jM=,tag:bF+OYW5cuKJFveYMra7n7A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
