--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:cGxsY21K,iv:pnjPS9kjTh7DF/g4GfVRErD1MnAJRkezayS58Ef3Hbg=,tag:TbzEb/JzxS4VuX8V2uNg/A==,type:str]
-ansible_user: ENC[AES256_GCM,data:x8cXuZ9y,iv:84dRg9nOPMOjJ77vd7OfkAaGtwuajMW4awIwIPcX5o0=,tag:xVFl33NW0MYPe+BVd2D6RA==,type:str]
+kind: ENC[AES256_GCM,data:4dUdJM0L,iv:0DUB29Bil4Pr6ATB1KnDpbc9f88boedM95N6eXXEYh0=,tag:u/5OQD40OAOGgvq1oQxXEQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:6cYDalMH,iv:kEGzJkd9epu/Sdn6ditDzENlbD+YzTDrcTKF7JgoWF0=,tag:xa/BK2TRq3+zKnpnSPGoEg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoSzRxS2hmdjJ2WGVqOGJM
-            WVliazZuSFBBdElnM0Rrd3NMMkx0TDJ5V2tFClE0N1h1SWNmelAzaUxoa0NwcFRN
-            OGpyZC9XQzVjVzBTdFdadUFOT1BBWVkKLS0tIC9NaFIwL2U3b3IyNDZIaldSU3BH
-            Skt0cHZXZ2w0azhGOXFmRGlyeHNPOWcKSFdPwi2zOC5LSePTY5NF3kaqcGRspVVG
-            TjaQzU6LyWXppQEIHoZ/eWz4iUV7k8gEgO9SofxiUhc2+EGTO8Mjrw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzM2dEVWlCajNPU3dRTkw5
+            L0FCSjRJMnNMQ0syd2lxR0VtYmxxdGpRRndvCjRRS0ZKZGg5YndhSUVjNzdWZUNq
+            RG5mWWMwLy8reXU0NzhhM2VycXdNNUUKLS0tIGtZQlFyME1KekFrTzlXaUtWSGpL
+            K1RkdkxTQnovSElyS0QveHdhK2FpNmcKxbiAg8D7UnTmx0OF/p2KmhRChc6FvcDx
+            au8WkNIgoHwgqLG36E+RQl86MRXTBcWDBy4/HdDdmw2ZOy2hqqoW8A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T03:36:47Z"
-    mac: ENC[AES256_GCM,data:6l/IAAY7Mx3EjApZnk7QlSUfBxumZB06dtgBJYr3K77kT7V4QAJWcKvcQuGxi5sjJLwCx5EM7dPehpvTnzDETTqNrr+I8gaTm9W9zrRjDxBd+wgsMndhMwEVYVPT3usWwZTMzs/X3YaSaQeKe8WbaMdUiZ/f6Q+NKeJew33OPQ0=,iv:kQrGet/yAcQCjOBVctWRjuR6k7flgomPhsSJOd7T9fY=,tag:+tBF3sh4dLBHtYNaea2O0g==,type:str]
+    lastmodified: "2023-03-16T04:15:11Z"
+    mac: ENC[AES256_GCM,data:aF1398PSysuyRGnQE1Sh4QlmfSBJ6HCN7bjKQMwmAp17cS3TfRxgAO0zlSZuMWe2F7fI4hY1psUpiHp1ldxyWukokeZfMyMDIxwWfwKHQbmp43wIkxzoNyKHfrOZEms7HzNIfptMm7vI5q2KssP4yikZkJldtUeC4oEIusmDmhw=,iv:bQGuouZfayF/HCrHnajQrD1zdrvSxWPKnALduwkiU50=,tag:2IjWiLZWFvcPE55jDsfIOA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
