--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:AG+UGSdi,iv:1PoiVOvnvVUtcHQeRUBUsXAtxJOyJKCkHtei4VxzBWQ=,tag:AtI0Ph2kM0oEHCMk1MTb+w==,type:str]
-ansible_user: ENC[AES256_GCM,data:KzWQh6BX,iv:TIWQq1u6JKXNWFcc+3dBZdHwfbXbVGOPjlQ+xwtih2M=,tag:5J8UOELZtBLlI0xxk+l/2g==,type:str]
+kind: ENC[AES256_GCM,data:wkLir7ra,iv:ty8UCNljf+8Vsw9lzO8pyJ0xtelJvja/qe6MWoiA5bM=,tag:HVO8mqbgmJsmxGeFsu3AjA==,type:str]
+ansible_user: ENC[AES256_GCM,data:AjI7ILzB,iv:I3M5OCVDfKq9xt3/w5BP6Y/1FXj6jO1EB2PJDfDRKc4=,tag:pkWclJF2FXQHjFFWHVBbmA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2NkZMazhzYUx5aXpxK2lH
-            VHBRRXpINnlrdXRjUWVwSmFGUDBuM21hRXowCndRWHh6THg0eHJwWnZWY25zSTYx
-            WHY3TG9NLzlOTlNhWlV1Qnh4Y0I5RFEKLS0tIExZWUxqNlpLWVBPNEFxWGZDaFAr
-            T1c4VWJva1pCekh2bVIwWXdTR0hiR1UKG5BqOJ6xProRSF17O8wHLABP4Ku59jEG
-            xJtLhklhkRhyk7hgypqHYW1mpQPdmhc4qSu3ANFo0B2aZBs+5LFmig==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwZFh1a0pjWTAxZkZkZzRi
+            YTNlWThNdzg2VG1qbUNYVis2TUxaQUtWRWpJCnBrVUFOYVV2RzZMNnU4Q2RiVDZ4
+            UHZhYXJmcUNzMTc1OEhKN2N2UUhIdGcKLS0tIFg2TEMxVVFxRW1pUXZtTERsd2hD
+            ai9zcjlZTzk2VDl0SnJTVnlQOXA4aU0KTdwVNS3YorML+BQUq7avov7UfpovPaU7
+            QNgSL9ia7LZmlyXsHjmADrrimvF3F1QKXa/v8JrhbiwlM3ro7/f/NQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T03:36:47Z"
-    mac: ENC[AES256_GCM,data:0THcFo0oJkgnQuc3uPIZ/E+SPBH9KD48zGblIIYlLIMbZ3BCpuDRC5dYVEZiSb4Qp2UfWR9HyHFTOiZ0EortJOxNo42IX5zQoMECwrSuawyScw8Zjove/D7OCM3HYGjfPx4HYRa33nUPUYZFAdJK3YpXI0Kw5gTIvFX9CE+wvIU=,iv:r7er9VAvCOUGGCqhDct3VfxSvdtEb2q5adFN1E6UKls=,tag:dhG/Yg+IEJ5foXZXoaEXig==,type:str]
+    lastmodified: "2023-03-16T04:15:11Z"
+    mac: ENC[AES256_GCM,data:XIdp7ZatLx1Wbb1Pg5zJhycV+bo1eTcM1Q+itOL5dT04uGbJV/E9VfLp7k/KmS6AnYYIIS8WyL2Fen1ltopFJSyqJzl2pli13E5aL4XYDXSakLBcuH7VKFp1bqI1loDCLwN++xe35WAFpJLO5CY+zxGxq+0iMBlO39b4sEAonNI=,iv:arINi5hdTzVB3oispsEz2Z1/0JrA860cPRQNQ6UldBI=,tag:QE+9eZCd9XXbf1eIwGbPrA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
