--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:bST/LxZS,iv:V0Y4Qz9ukuYngFss9wA/+MbXLsXP+qSQaLTDAXLedl4=,tag:Z8RHyLZ1KNNBmT04xDvxUg==,type:str]
-ansible_user: ENC[AES256_GCM,data:hfO7G6p3,iv:Mdbyb05QfjYOhozlYbshqGOnIsU4T8oG1mwtb4H43Mo=,tag:VzgMnAdCPFiWQRzPXMAlYQ==,type:str]
+kind: ENC[AES256_GCM,data:G2ONPh5W,iv:ReM9Nnod/0JHe6wcb9F0YxGhmY3MN8bDpaU93KfKVFw=,tag:AKkvSXAl4+ymXUz6NRDzGw==,type:str]
+ansible_user: ENC[AES256_GCM,data:5rwpPm+b,iv:d6HSYXgcyoJP/IgR8+vqydcH2QT6kpGE8nIfrt3w0Fo=,tag:B532pHQh6kv9bX4fH1Kpog==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2VVEwdC9lNzA1UnptaW11
-            SEpHay81YkRFcnBNU0pVSHB5OW52a012T3lJCjZvYzV3L0dtT3RlODhqYW4xR0pJ
-            d0dYeC9HNW9GWCtkTkZ5T080OXhGaUEKLS0tIDFiZ0xoK3gwVjNkY1ZIbEI2dlNm
-            QjNmUWdJUzBxb2x3MHlhclo2TTJWeHcKP2DyN1HzRLPbtVBLC2JSWVLYhrOrv5kg
-            fg/EBWItAf1vzO6EoeIy2zVFtnzF95ycHDzhjk6fXRxAGfnW1GhOrg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzVXpLMElQZTRYMlVCSUVo
+            NE5TUm5WV0p5dDFEaFc3ejRQQWZxeVErbTEwCmFEdFJJYWNqZ05VWXkvWGxVTXE1
+            cloyMnBSZ2FjZ0RmRmJzb1VGZm5KYWsKLS0tIDJTWm9hOFpndG5udGpPNkp4MTlV
+            cnY3aVZNdkRzS0VJRlBpNGJpWHgxb2sK9PLYtuKzMEOkqt50to4wh8WsrcBSbOL7
+            7S09b9YcW7g8jskzQ3XDcI5mCpDzzL+jt7Q6XJ+pwvqvX2BIQqlctQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T03:36:47Z"
-    mac: ENC[AES256_GCM,data:Ocx7y/UI3X9WFaOIVWM69boaJeqxLaW3cKIpabJDXX+Fxh3QY8tFTlQiNAZA2NhJ3PjfMMEzCTCO3icwvVnih687TQoCpkcGeBeKpuDNUZR2+UyHr7rxHJ5T7dmuoy1HXACXh1PEEFC5ulmYK7JuNInVFb1TEBJRHyH/l+8PFs8=,iv:iAEya1Ka7N8LCuMlhGKnykRcWt+SWw1EEWMIOsSouJk=,tag:Ns0GeH5w1CRu/8SmbGIcxg==,type:str]
+    lastmodified: "2023-03-16T04:15:11Z"
+    mac: ENC[AES256_GCM,data:GvzSf5yWOfp9toYwGdUIVDPAJ91hC6cgo/A+seuayamOAvazlYsqP7iAyAnG5oRugckKQT9pK5EkpFlr31x7rhE7RcC07tVhdRVLC0atYChy67oJdfAC68Jcp7tCyRp3NM+z4NIB+CN+MtO1gs7r3EC8Y2X+o+KQCJtKCxCH0CI=,iv:f5AWOkMiDNVYZ9mcCKpqdRBn6FQAZZHxsEjIxvkNW0M=,tag:wamMhPY+xWHaQuv4nh5Azg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
