--- a/ansible/inventory/kube/host_vars/k3s-09.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-09.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:dxle6Z/5,iv:J5AjK/wINU3ftyLuONMMA/LltPee1ytwTsHAibDTi3s=,tag:qDzR757jfWzaDyLIHyH+3w==,type:str]
-ansible_user: ENC[AES256_GCM,data:G1i15dzE,iv:Ag+cChXL6cemAHC152UIvdZnEvrlv9jFd/I3nJEzd98=,tag:c+yzLKJmwB0qH1PpqwlN+g==,type:str]
+kind: ENC[AES256_GCM,data:WcrTnhax,iv:FJON/fCxQOmNJvQZT9i/UYg0res/oADtmmgAM2UPCu8=,tag:el7dCGlZ/u3r44Z1kkoBRw==,type:str]
+ansible_user: ENC[AES256_GCM,data:fiRq5x9U,iv:vOCHuO/hh/1nf6/13pLhJTrpYrXyD6xU3tsyL1cnHFU=,tag:oyWDRH0atNSmH2k0wE5EIQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuOFYrUXFkUHVHNjFmTkJY
-            d3QySk5ZaEEwUXZheWxqaUFBazdmVjJyR1RzClp6cW4xblBzRjdQSEFnSWV5ZjY4
-            N25XaXZIVXR0UHVEcVZ4VnUrY1ZZQWsKLS0tIG1LSHk5UWU1OEV0RGlRMGZYUFZv
-            TmdwY1Y3MU1veVJ2c0g3ZS95R0VyVjAKvgkPjlyQGKxc9gbvRXzhfvlumyrJYc9m
-            jJxkYpkmCHQ4lJKgHdznfoi5DCOCCz3qNQBi8Ff+VLaRgB+sPf7oFQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0M25YT0VxSG9xWTJLN3RM
+            QlVBTU5IZE5pZS9ka2hEUUk0MkIvMlcveFFFCmJ4U3BIY2NsODZEaEV3UGk0OHBo
+            aGtVYWhmY01PbUJaT0xkTUVVRkhUWDgKLS0tIG1YNVlvK0VVRmswVFJNdjNnV2xn
+            Wjc1eDFXdnljQXFTRlVlaTZiNkg5VFUKpdd4F3Y7Sd/6yhSXQ3XMUCaz28BsIHVr
+            gDNhEsrdXDXf1Cx2MkZYaxZbPrB2DCMwTOiXDhOn1kLWfCvRCmAqXw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T03:36:47Z"
-    mac: ENC[AES256_GCM,data:rKkq/z0SeZmBjdMMGoyUHcFVYrd7HpCNVBs/btVhxIHlM0AXTcd5c9RxMZyoSwprjVHK6rNwcZZTpzfi8ZekwuYB4jGLulNQ7PVTnQENLcNsu/LsmpKVvDxz1P3jWxWdawFo1kgE3+Acw9Ukym8/BQcetw4WWgZjfpmZYF6NWyw=,iv:EA3R8ElE8AQ8tFvNIy6RBBbGOQzN1x8BaYmYBhQf7C0=,tag:puRmNa3jXa1RCrE4Sdk27w==,type:str]
+    lastmodified: "2023-03-16T04:15:11Z"
+    mac: ENC[AES256_GCM,data:ayjLXawSj3SSUIYng8RYfJbs7ozDY/m22ycxQjsh/AQXnYiVJbJPBeaG0qmK7TeZJnBemoMOJZVnMVjja2dH+ODr1g3rjnT2tLbfynxbXg6h196Emw316SR0HbwLmwWE8wrkeO1LTK2RHefD6LXwK+TaIRbVvjwXvRllG3fhRQ4=,iv:yBxg24lzJX+pw8mdELrZZ+XmJGNdzeQdqjNutfn1RxU=,tag:MK6CXG8M1tAUbAoMkhcCiw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
