--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Q02t8TK+hZRWsePxLLMyIbkBlZL6,iv:Qub74GTNDToCcc3LTLxPKWcAb+e+nqJ/oBhESraZ9wk=,tag:L4lZl8REPpdXdvJn2xEMCA==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:yZw5WVg1F0T8T9k0rOC8eGaMws7+GjT3hfjX+Ze2mJQcH94+JA==,iv:cPSUYWlh+6jKgDr95N9oA/p1/Et9FKIKxZr8yaX9T3U=,tag:9ZyEG2QBveL/jkptqgZoOw==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:/d7cx05AFHFGR5U=,iv:ZKttpAAZIAPvnFMwccIUvCu/I+L9Ht6Y1f/wZyP4FN0=,tag:U7XdugyGVjuRSpkPTxKrRQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:3bjAEk1ssGSkZdAezW/Fq2uMeiwQ,iv:GS5dhEnvMzhUqixUiqzrhcb2/W0hMeCewkSPV4zeLIc=,tag:w/hak8NBU1NVgocx1kakmA==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:0c07OwfIzc5rPtE41YTQhPM6gDX9oZa4Sqzl4Xxtdx7e7nLk+w==,iv:XOkZnC3qTAL06ANubFvnW26GDYiorxVqEBHa4wLkPZw=,tag:v7ywgqJ/49zv9wbJgd3gbQ==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:BLdfD3UOyyGPGXI=,iv:rdnxlboEi5AlHzYYjX3ps1g2RqBFpiEZyKZTK0bOGt8=,tag:xj6/iK7U20MBkMa7nyUZVA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0Zm9yaUE1elU0bGQ3S1o4
-            T3o5d3dCQlhDb29Bc3JRbXdNdlNSc1YvbDNrClhFNTZBZUYxN090Rkoyd3hqK2xY
-            Nm0yTS82WThTNXZGUHprRC8yZ05ZaDgKLS0tICtJS3QwZ0FaUWVwT1FzemlJTCsz
-            TlZWYkFOaHk4YXNvT01kWTk1cHdwNVkKKPVeV1UMO13A0T9p61/UJrspZjaRS98G
-            LGxJF/5M9AcufbLzElsJXjSJxC07w3sYpv7+DuApwRZERsscVLFgiQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqYld3OVVNejk0c0FhKzlB
+            amxsWjhuR1cwb2Q4R0dKd1F1YlZuMW05Y21VCmdtVUlVRElCVVhuaG5TZ1IwN2JU
+            dVN6M0g4eG1CSEZvYU1KdGVubXVVYWsKLS0tIFNmUGxDYlZnb3Qwbk96N3RyMmlj
+            Z0w1c1psbnF1aDFqcFZwNWM2TTJNWlkKxc6Bakqxdic19yTaRK7oGmlD0Xaspub1
+            LB9vmkLsawidQjJ2vaq67wT9P6mG2J4ZUjX3oGvYvCZvMlL0ycsc5w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T03:36:47Z"
-    mac: ENC[AES256_GCM,data:LlsqRUmaQEdiwM4w7a8JWTp77gEJcUEGopPaYMP9qBa8pw/EDqa+8vOpDrBUhacm6ZSIu2kl63qycpE0O60n3bQtQgd4WSSkuvRsKPfIUiWl/rdHzxmNLQOfVdFNJIAKVGq4xFkfGjpL08g6SuhNAeTNpDe3/5LDtc7prDbHvoA=,iv:4u3pazeWITCgKl1Prmb1AOEBcsAdXf+14HkdSGz/98s=,tag:SpOEEce/O1e+UGIVriTIMw==,type:str]
+    lastmodified: "2023-03-16T04:15:11Z"
+    mac: ENC[AES256_GCM,data:KR9/ThxSUUfGenQEhzKiwKFAlS7RtCJjczMEqfBFDiXzNWQDvmpNSsMr9SA98l0NFtXCz2CWkbdIFZFs4U2ih9dA239wXEXxp5Jw8KS9uOM4OCYH1D/UwN9jSojuBJvtSGNig+g+XDLyyFlAwxIMtkz+2zV5qgVEuDdWls4ngFg=,iv:ZCtsB99Zf4YOhfeXfo/NIL6KEC83+KMhxb6/pF4tFq4=,tag:BtgMHH4/9JJbOHmrRqe8lw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
