--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,34 +4,34 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:Iwy4//rIzQmxUyg=,iv:EwhIczU2Uc+m8EsLdsXQW/9RQ8WJpET/NRjbR4BCLxU=,tag:Ib2q4NJzd35fgH6ClAkUmQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:CaRFaALyZVAHYLKrzuXZogaa0qpQ,iv:RjMtDXGyDmPDAPH2QGWfZLQiRmwiBpruXqqgxHPEMws=,tag:T64g0GP9DTb2XNbdHwhI8g==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:2xd9EOI1D9BFJU81i8opwfK9fSIo7e4U96QBBlnMryo2vcN1uZYIBEPglbK+4v+eRSkoc/W2Z+4wrx0r2J0K1XWvHogX7hs=,iv:E7MYBBZnmoRzzJxFVmwKY1OdT37sWAnmhXLTzTdDruc=,tag:TeLIVdTKMOyC5e7DDU/rOQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:b8kBy7xJk6P0HLQ4sQcYkHqU2Olweo+8XfHlVaY7hZfv9Oo=,iv:HTK3ZLkR8OsAAVyf7f9iI0Axfajn0lWw7BUcn0jaBcY=,tag:wYQiVZLYzRdUgPVwq2kEFQ==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:EF4pnqUrlDvibRa0oCxTft6z0w==,iv:zt05Yc83GSJxcNvuFPQxguiL/R51/9ChW7GlRD52O38=,tag:H4rJ5FATyWkxIDluVlwEvQ==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:zwfvdDUMITXB3Z+JFnTK6vo4lxAJ,iv:43KWRrUQLy7bkyQw47d2gBk73tfx4xaOZ7N2XpA1Vok=,tag:nvBT4rsGxRulq/Y5PvIZ4g==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:BEk/xE8ass0=,iv:69Lle3mAoOXig55RpuPdU0JduSXvtrq7HBtk6tZrqV8=,tag:j+mtnmF/p0vJ76lkn9Mr+w==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:gnRqyr9J84g=,iv:0WCuCAhLrhcymuUt0vaejw5cUWIhZysn9isVnIiTsZY=,tag:ylLJEwZofTKKq/wKCZRcGQ==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:dxFPA4tPY54P6GAoINlRpbhRC2rlsa7vaYZtJniDwS4BKYQ2BprZqHYbI17LbqyYj5PtLhXLwhNQ8cOyWqcBzg==,iv:skhSIVPU2b7rDQZCGo+pLmzwft+jwHl9MVHUhwt15Ic=,tag:PjwB/cQ5Z20lRS3S/Uex8A==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:A3eMOZAvFvvgiXhxQLa4K/QEULpkU/HR76zVPWGmYrSa2ZMHkfF2/dDipY0bVcAoXfycM6CVUYar8kzuMELmbw==,iv:M7Sab92HV4/CMdXcWpdjjwMTBh0buPHCoMkqn1UqZwM=,tag:K246lDADAFsRVK9EabkqrQ==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:5xVUdy9qrwDI,iv:a43e/IpKVY1IB1Fk5JzDPeS6uySmvRwZeH7DppRE/H8=,tag:6CnS1Zgn9FwUtPD1az7Bfg==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:idXCVpLi4NAJ8pOmfIhg,iv:Rrka1do6PHYNX5ULXP87cO2G7DW0i2ksvB8D1piv0FE=,tag:r4n0SLXNGXjzgn5r+PrqHA==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:Odcy15E2Qmg3qFEcVrZMng8P9flBnNHop5iMjqKADGG+HS4xyUu5MksslOHl5vkqAhA=,iv:eYOm4oiGjfssZEhB+LdqYXlkiH/5eLOPmdjI3Jjcp3w=,tag:SZ+TAHkbIYFfX0xqXBdm2w==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:icEvqhynByqqVLYHyJA=,iv:m4E9pfWOTInY1/J+0x6jd1E0XvEnQ1Kh13MiW1A0DS8=,tag:0HAIAQ3bTrZrF12P0Nqb7g==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:E60aapuDqXx2CfiQaxhAUzsbTuI=,iv:ufl/JzQFxnqS3CcKQo4P+QItvQwWooqxLQ3/0cy8090=,tag:S1KRJgFvg36/4WbVm/mdZg==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:KR5GWlW1lxM=,iv:zj6tcdIyhMWPw6IBx/qu8AWCsak+/2Rb7kDAjXpJCJc=,tag:HVF8IQ8ygjCpvxa6nBkXKA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:GOLKo+EhXkJqc6Lc1r8+dG9wyOj0lOS2B2CltG+wkzOuIPZjvw==,iv:ksOGYjQqLYMJ2Uv0FtBjPcpQJ4O58/0Ym/XK1E3wVPU=,tag:905VKPDrpymSmwlmFFM7og==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:CjKUUtV5B0Jx,iv:dJqM1lqjJ8JzAxWoG4f5DsU1J1IqKd0hBt/xH1vWxNA=,tag:olnbadvc3uZbBGm4W8iBTw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:WFop61u/7Kvk,iv:v9knP0ZNtS3n6vAL3g/8j927EkMypT/80Qe9ptpACUk=,tag:+BcrAlNJ9OT7j9SLrewW8Q==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:TCtVcsLXfw==,iv:mnlpqV82HMRmwZHhe9dxaA3pK8bII25fU9lpIaTHzhY=,tag:Day8De3T8iAcezUnYXnkGQ==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:Z3RdgxKk9TFA,iv:Fc5P64yDoBYU04LBH5H9c/+aNfOr/XloZHyNeoRFigU=,tag:3IZVVTH7sNa3jURdMADJNQ==,type:str]
-    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:Yagylc6WIwbRn6m7hrUv7zND,iv:nyfej8ZS7RWnSCDskUdEPRbgLvqi6hLpV0OB1ZHVixc=,tag:sCerl0e0d7mqvmTrGjoeNA==,type:str]
-    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:Lf4iewxGaJ3Si/BY7MXnPbAv3w==,iv:KzezmHDdtdqw9c2vtd1ckCajKCzcZTqTlaQbrV8RP9g=,tag:F5cfr62IUpdgaaLiJQycMg==,type:str]
-    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:75X4woslZ6g=,iv:WWY1spAbe3pPOkKCnt3tssfKlinsVpEypL2PwdoK6wM=,tag:U4uFPpuTSbQ21era5skpTg==,type:str]
-    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:im0wQz/y34wkrcMt9ikielI+iw==,iv:mAOG8BTIFWc4Q18G9XYqYVQIeh/+YqwC9C0WMhMItwg=,tag:KM0JfXaByVueJWjQ01sSIg==,type:str]
-    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:VPR+6PXV/0ma,iv:5aUxYnhlgcWU3w2denQdqphD4d8yGQJRRaPJDUue5MU=,tag:pAck/7aGQIqAfVkZLxmrQw==,type:str]
-    SECRET_MINIO_USERNAME: ENC[AES256_GCM,data:0CSpyuCwTEkcOw==,iv:8I1U3CrUR+Eo1Jby+HXecHw1ofP1jGiDg32GwhJMS4I=,tag:B7g2mH/vC2nmInrA4+DeyA==,type:str]
-    SECRET_MINIO_PASSWORD: ENC[AES256_GCM,data:xpMHa93uyuJRYA==,iv:D0o2GnP/hn6SBXvkciiEaedV0mIdtSfdIW4MQWSSqso=,tag:0F+8JjE4Zz+q8/8sE4HUuw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:/T7Poi/43WIplTY=,iv:qBN95Q63YgP4gYEo4NkVVQWchSw5tPf7rXFIPkpO2G0=,tag:GFHk3R1bj9/bwTmzjDWG6g==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:gbm+mdAvWcR5R08IFtnis+fDthVl,iv:155PR2coHaiTtbKpnvH6Gg+OOlB3ztV9og3bZ8UUaQ0=,tag:Nyt4ZLjaXui3GMDfWoz9LQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:gizWurrhHz4VtlT+2sH/3dbssHqUtx2uGxs0Zjz0zJLdigI6EKEUfEbX3oRIrBIG2M8YAZUI4Z82gKQTPekekMk6YpPHdPI=,iv:EzhOkH3atcVIIsyTqe48HZXEX+KK9Zm6EklcvUgWzRo=,tag:3ngTf4z40LYO/FETOAhD2Q==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:TabFIMUmcofPf2SGIjNzDn1vgsxohm9QGc/6Al+Hk4gcWNQ=,iv:uZmU7zGrMC0+WS2SXi1ECfPnN9Xj6RluBo6wDeaOuaU=,tag:0UWYFEZIqC2gtCxkLlaSFA==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:V90e3f8GNGqIxjwCruxEndWucA==,iv:9iOubX8oSOJmmHg//xvLC9uCDQAP8kbhHcRp+eriuhs=,tag:JqLD1iKAamTCBLSFdvIXaw==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:6sdZCdqAO76yye8j1+tbHnn5ksKM,iv:oJhRdm+EL3tpAp0oReHMLocmJhz4YYbnlYGVx8tF7S0=,tag:WMLolpZ9aqcFKxhgyABGDA==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:Tmnls6r702s=,iv:/JfjUrUHxn89/4JUMRXdAWQb0PhjRm3PZlq2yArhXK0=,tag:F6GUsuTnuIyEtEOHMgo3Cw==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:RXXa2hDTC6I=,iv:LmohXeQaxBFvu7fVBky9trXk0idpY/OB7BLyr5lP7iY=,tag:R1Lz9kQKD4duEPz8/O69zA==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:RJKYKwiLKyWlXDj+j7vWTxhJFYlmsNiiTGcBh5y55HEiv5Wj4IhIp4w665ujG/u/MV9j+sowOzOQG9bzppal6g==,iv:5Ic7EkwQSictMMUvdrPSFNtE2BZuotozm5vTyriwCNk=,tag:bLhW6CvKlSnsZHVtqbRopg==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:LgOttNVqtW3eGBfPvYhtxRE1crLOzM8gKxpQyMoCXUYIrK7YgiDn7NAyTY4XhFTBR3SIJvrHKAiNHles8Cv6Yg==,iv:UpS+WqdH6AAiVIKd/mEAX25TS6+bhT3TrZpdg2fS5Ms=,tag:d+8JjAE7oae+whSJlrhzWQ==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:uEZdJRcHRI4Z,iv:ZHZs06wHkVdfh+gAs0nmrIJ4cjouqD7bRQP6dHxpWUY=,tag:q0QS5O8RJy1uQ93a47FUUA==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:H78GxIfYv2XmCZRKpNVX,iv:bgFNXKUKxO/1fKo+Ez7qY68wA7HSh5DcaM1BWdlYDGs=,tag:mRdZcnxBhGkBadgNdrs/eg==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:jlppWFrq9ko8mvbhHeCyN+mKZO+A7T+ywF8L00E2a39AxlZ7O3Np8LbGeq8xyIad4tw=,iv:6Hk4fu5hpBwnfowwITrQvM8Svstw6HZAcc/YGIMO/H8=,tag:tsHnfakjeRTMcf8E9itUnA==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:ZE37I0QSPNyT5RrsuNQ=,iv:UuRg1Oup8OpVxpEJFc/6fZEVUud/NATpHJCV+42ZSoI=,tag:85R7I/RB89ocObt92VVI5w==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:maf8455QecyJMLc4F7LCGayOf28=,iv:F7YNoN4JgF6j1ihgkVFWmwvdHyJSLlRnNZN41/sVJAA=,tag:Ho+OPv+Ai1uNLeT6Ebtdug==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:zx1kumPHVwI=,iv:vmhA49ey505SPKk7n1M//xIsLgOdizSpLPesVrHtwRM=,tag:AfrrEsmOP7xG/uSISGypYw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:uzdUMl0ewuoXRsssbRzCcR8QtHz1mmmkEbJbKVYx35cX0ZVPuw==,iv:DoptuXLUuBK0zfNXSwNu6GXXhlC2+HkwSsCUQs/Io8A=,tag:zo6z8U46GBrYlMzLTJvaMQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:XzLvvQN+tE5P,iv:P52AIN/rCZM8phZXgOPZtMi314xBnsZYC1q8wf4ZfHE=,tag:yPXf9GvIJQwosbQztWMV5Q==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:8PtHegVDyAR/,iv:TgeNPXOE4ZRV9GwoYSpGyvcScL98YaRsEqMllNPdvCw=,tag:Ih2dQlJuqcQsuJVtNDdF+w==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:kGqWBl7XxQ==,iv:M8RHaEanaeuyHrGQ8hMr6NpnD30ZFiz+rR7Twb6z/SM=,tag:AKknUDriguHaeKxgkkPTqQ==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:MYmq6NNyK0Wr,iv:pALu8IPGAdEsOFbOz4mTjFYqEdZrYvhR3+xbPLXQ+bc=,tag:OfLl1Fce+LZrnmgdX0Ia1Q==,type:str]
+    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:EhGhaCUg8fpLG+nSUpOVj7wj,iv:8reO4+vFXHWM7UxEnwHyvdicLSm6h6eRA7YP7cpDqZs=,tag:r1DayFPuWF50xpbtnl6LgA==,type:str]
+    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:AV8PFj9vbsDi7VkBIVOfPvDZ7g==,iv:uiCUePRZEY4k9/nMU5hR2cpW8aM6WGUpekoYuKqhEBo=,tag:YM2XxCc6wp0yDs+czhWfAQ==,type:str]
+    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:allH2ID8BVg=,iv:msbZAheYYhu6KGUPw4cfg2Fv9iJs+0pFjvPXGiXMa+4=,tag:u/lBm6ltjTE4Ky3iXDglaA==,type:str]
+    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:uGwArisUdgQPxV1QWYH4LdS6GA==,iv:qjzyQhwobceG140EfMKHS+dzSkrC5lrqto4Dj4F4E9A=,tag:v5X0b8XAfcbZ3+x2KNAIHQ==,type:str]
+    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:MVhBJD7rJkJR,iv:FoioEFZdrzShqfavJrCOq0mGunizZp7efE6dHdmTAr8=,tag:1rUQVbzut2gbwSfYB4EhXQ==,type:str]
+    SECRET_MINIO_USERNAME: ENC[AES256_GCM,data:JvywrjwJltaj7Q==,iv:1yl1Vymzi/WiKxJLWEIwgM7eY49yzzNqYvOO6YQwplQ=,tag:NrrZ3/pywCEejL2hf5t1YA==,type:str]
+    SECRET_MINIO_PASSWORD: ENC[AES256_GCM,data:qGSa2/Pf7STv0w==,iv:qwTuSQQRXi9+XcP3kTRVbeYx2JawuBCjkJncD5NIa0M=,tag:iiGDto+OGfUKDpLe20yXMQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -41,14 +41,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwVFRtTmFMVHErMDhzT29K
-            dTBPVEl2YnNjaHFWRllraVdmcmI3YVc0dWlNCjZ0ZkxZTzArNW5NdHhLQmxWWnFh
-            N3BnakhNRXpRb2JpK242L2NKMU1RelkKLS0tIEpyc3hZcmVGSUd5aHpoVU1vU3pu
-            bU9UdUJBd3hEZ2h0eEd0dHJOWWlOR0EKtzfIHzzm5ZLMCQTeVfJvuYBwPCMOmq8a
-            zYz1Rgh7rBy2cq6lCcLVBSD3WHmjTxZwMiXNPzbyQD3XWM6nMBzigA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArY1J3RTNvdDJWeGRmL1JS
+            Mndjc3JvKzFmcTBuUjlZRTEwUFRLeFpnclZNCmRzVWVpNUU3dmdubWNPRjlnVSt2
+            Q09oMTFTLzg5QW4xNEpJVGgvRTR4dEUKLS0tIFQwNUtESHN5S0kzb2Y3QmZQMkhB
+            RVZlcVRuc2hZbm5lQnh5RitqanhsMkUKfEJwjkUG6LCwgXqo9YKMlnt19gstiJzz
+            QwaS0XpFp9ywl197/+zzq4/2Mej71+wMrwD5EdSZELrI22f1yjmTnA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T03:36:47Z"
-    mac: ENC[AES256_GCM,data:cZOVSjLVrdI5y7pHbmqkv2awj+D3O9pO/ChIjfFF7QLBxRuhrVR64kkO9Ff5y+b3HuNSigEsB6sWS0pDAqwQ0RqEYKwssB256k03xLHhqChhhyK8qIunp2oaDn12zGXx4KWALQzL1HxB+aFSrgDBLsv6I/LPBeHRx1HjmCevWss=,iv:KopzYDIxYUQEeUcOw7x7tfH2V79QXmBVAxDv6p6SQV0=,tag:W6LqxpnQaLA/bn0oM6C4LQ==,type:str]
+    lastmodified: "2023-03-16T04:15:11Z"
+    mac: ENC[AES256_GCM,data:vrvLHvNSjrMCvIpudVEvDtOyKirYWyIgtIhnWt+QeESMZZ2/zaT8lB9rO7RrjFYQuqR2zfnso5Ajh5p6Em/S5KasSzaydjQB5Od7EpwwZNyyph52af/XBpQPVN1kIwU7gtx1bcJBhhBaluVcnDtZoE4ykPMQEnPWE7dKOc2JGPM=,iv:BW7UdzLsqewYXiKixUuuVVsNLmxfKqBDxwgdWgHxnYA=,tag:nhrrIFNjHqBZwfQMHqFWmw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
