--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:K89xIE8/,iv:snkMwefMIo1dXO/JCeM2XbDVedpXNUV4ibnqEyj6fmo=,tag:1NQT5tdNoMSIA9op1dHZFA==,type:str]
-ansible_user: ENC[AES256_GCM,data:GG86h4SQ,iv:mmSdVixTJXyylMnY5pFiuiGi/ZT5Y6khRWzleh4bdh0=,tag:iv6/VP0ETTMb9ukK+i+gyA==,type:str]
+kind: ENC[AES256_GCM,data:lxg3eRrk,iv:Q/2YoSXPUd8WEOOqnU7Gk3BT8mulpU/BvGem5CPPN+s=,tag:pT54ZKfjubkELsfa/Cr7uA==,type:str]
+ansible_user: ENC[AES256_GCM,data:XBZFv/di,iv:2XBxJbmepgaxQKMGsum9UtcylDF1CZjsmCYkJg/Agz0=,tag:xtapksbTfbfpDSnVMGKMfw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMcFFNUDcvd0pqSGZPVHpH
-            cGNQRmxMY3VNUHBYWlJZUXFQSnc3eE1NK2hRCm1VbjZGbUk5TEEyOWZZU21UTDA1
-            aFpuNHZpSnoxS0dwaG9iYXJvL3pycjgKLS0tIC9xRlJOaG9tdysyQjVzWDNnYVlD
-            WFE1c0oydVZrUWpYT3RadXgvRHZpdmcKd+h0/KPQcygewEP3oVHw++riuHmaSfHv
-            3KOG9e9hXtVc7bCi9VHKS3UYvMQelUV/pTYVWlqiobt6YuPEr6WvZQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqZHF5Qk1IdjVtNVRGeEhU
+            Qy8ybkl4RDZ6UkREN2VSNVhIQm8rNkNFT3pBCjhGUEh1RFppOTJZOERBdVJ2REVB
+            S3N5TmpqZU5FTHBFNWVmSUpvQWhYWkEKLS0tIDFCNmh1Tmd3ZngwZUEyU1A3U1hR
+            Ym9HR09vUFBTVzZwSzcvY0VUbmZmOVEKlG08owm7RpnCG8sPZhWOy3eOFciEZlI0
+            hzNDP3mTuqPIc8YsynVCS9Raz3kiSxB2GbdDIfDcqeQDGJ5GcHdvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T03:36:47Z"
-    mac: ENC[AES256_GCM,data:8h+wB1/Ii6wzk9SZFlYit/HFtZacWJgu4hITrPlZoQhAp3T9OxRBx1XZxiFIOJCeHs42wFsd9UUeKiexcqE411y270+uVQ5iOUeYdkKJmBnLlp+X3y7y/7Z1DIEk1jcmNFlElWn5zxg62HcufbH2b53vdqaoIVFHcv+LLa/IPrs=,iv:aCV+Vk9vpOk77CqtxUWXtFAe2Ari3Eq8REaSelomGag=,tag:Sqxs/Kn1gVCS0EaL+us0oQ==,type:str]
+    lastmodified: "2023-03-16T04:15:11Z"
+    mac: ENC[AES256_GCM,data:c51e1jj1d5aXPAe8Eoy9IvR64PRSuiHSEv8GwDSQxEL3PWvmO59Z9ldN+YJMfJMZZr/mxEGMyhF+pBwwMXrbRsTOydEZRpyg0Uw1TTlCFtT/oiyY+84kjNktMtDLLPl3dmoxJUzjwJbIYgn8TVfKF7GPloNNMgQN1fwBRpH89w4=,iv:BFHTvGv5m3SV917730JFiLnGaUW1Kvft1HmnfGB2aBY=,tag:Qc7ktMktE3oHN5am/wKghw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
