--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:iASaNaX5,iv:IBMd9AuulBNZ4SqbxxureQY1kXXC+7CQWhkx165N/OU=,tag:uITrpOSUSosoP8RK0L5ocw==,type:str]
-ansible_user: ENC[AES256_GCM,data:F+Y34zSa,iv:UnXMMT8s5RihKXEuRGkTlp/j6HR2a7PdY6u4dBzwbyw=,tag:YWeIFNlUYXbRW7SC4AAgTg==,type:str]
+kind: ENC[AES256_GCM,data:L429V8R7,iv:V5jPpE7wOe4hpdExDEWqR1CBQinyrq87CdczpuL8UiE=,tag:5MCsMbJZX/36FPYm870rGA==,type:str]
+ansible_user: ENC[AES256_GCM,data:Uj5taJtj,iv:jQz04//xRavN/RRNQMhSSfmmurk2Pn5/CEQ4x+Aj2Mg=,tag:hjVnACq1UrWwCiQyvH2fuw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzRnF4Zkg4aklSTEY5UjNB
-            OFYwamJKSU5tRElsN2ZHV0dnVkZubDc2VlNFClpGVXh3ZW5vMjF3ZDRUb2ZsVTVR
-            WFdTK0JTYVBVcWE0M25YMUFUdkJlOTAKLS0tIHpwWjUzVUs3SUF4TW4zQnloSUda
-            SjQ4SExQSjhiYVh6d1RhWGQzTWg2U2cKUjio5jM/qbyf0uc4xdBW1KGlu2MjVXVv
-            uHTtNGzNr4zXe3k5uukG2nGtM8+VFsfXRn3uiDQL+ey+T2gDlVfmyA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4MFYwYVdLb2R6ejU0RTNo
+            dm53S0ZSNzJxNmJ5dnZmM3BVSDM2cWRSaWxNCkd0U0crb2diS2ZBdHVQOUg1MkRi
+            ZnRBUFNCUXdqbHU4aWd1UVpZdFVhamsKLS0tIFlxVUNWcjNCUW5jbDRXdHA4Q0NB
+            dFVST1ZudU4wVGIzTzIwa2MvRzRBcUEKqMsEQDwh7ezj/QtNZHTYWfZGuyTuFAZR
+            IVTR19xEnKlpA3gkNGMGQcUMu0ACQYRZExLBPRAKLDoTgZ7086wqFA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T03:36:47Z"
-    mac: ENC[AES256_GCM,data:2ov4r0DN0AwwhvqXQgvTgDheGgvVHu+1xOL3bnG6frFM0Fpb6gS8cce3lCFWKpb8c6KQ+c0PYQ4Q8qh6/AdCVmPvzdQdCwFSJhztsJjTf0RSi25EZXIdni5Cai8rtdPmPh6ljoiGkHeDXJIRkbXz0BK5b/8AQkr73JdhAfZ1l5U=,iv:Lrz+81vHvF8PUaw1ogaJQLkvPKFoZhZx3DGGqC278Bs=,tag:hM95eoGQCIJYKC/Vpf96IA==,type:str]
+    lastmodified: "2023-03-16T04:15:11Z"
+    mac: ENC[AES256_GCM,data:kbwcx+Pan95MAFIEZYZFEZw3rkw43q738uY9pKkqTLddu7ewPuutA/D14D5OxGlwBSh3cUF2gasq4w+iT5yrhXrbI88IWk81JejCentESw/hwsRG4IU2ijQ+qw2vGL+JdOW+lQ18gJEzmZ0YPWDJkJYatMoiAv6b5bzkJ70e3RU=,iv:m+Rx2EGEfjJs29xJw01U2inq44281Hj9bHFfPeEGxf4=,tag:pO8YhQSui6AziXQNB27JUg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
