--- a/kubernetes/apps/kube-system/storage/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/storage/app/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   # - ./pvc-influxdb.yaml
   - ./pvc-movies.yaml
   - ./pvc-networking.yaml
-  - ./pvc-postgres.yaml
+  # - ./pvc-postgres.yaml
   - ./pvc-tv.yaml
