--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./goldilocks/ks.yaml
   - ./influxdb/ks.yaml
   - ./vpa/ks.yaml
-  - ./kube-prometheus-stack/ks.yaml
+  # - ./kube-prometheus-stack/ks.yaml
   # - ./grafana/ks.yaml
   - ./helm-dashboard/ks.yaml
   # - ./loki/ks.yaml
