--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/pvc.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/pvc.yaml
@@ -1,28 +1,77 @@
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: prometheus-db
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   capacity:
+#     storage: 10Gi
+#   hostPath:
+#     path: /network-storage/prometheus/db
+#     type: DirectoryOrCreate
+#   storageClassName: local
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: prometheus-alerts
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   capacity:
+#     storage: 10Gi
+#   hostPath:
+#     path: /network-storage/prometheus/alerts
+#     type: DirectoryOrCreate
+#   storageClassName: local
+
 ---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: prometheus-db
+  name: pv-prometheus-db
+  namespace: monitoring
 spec:
-  accessModes:
-    - ReadWriteOnce
+  storageClassName: ""
   capacity:
-    storage: 10Gi
-  hostPath:
-    path: /network-storage/prometheus/db
-    type: DirectoryOrCreate
-  storageClassName: local
+    storage: 1Gi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: 192.168.1.2
+    path: "/volume1/network-storage/prometheus/db"
+    readOnly: false
+  mountOptions:
+    - nfsvers=4.1
+    #- hard
+    - noatime
+    # - nodiratime
+    # - tcp
+    # - intr
 ---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: prometheus-alerts
+  name: pv-prometheus-alerts
+  namespace: monitoring
 spec:
-  accessModes:
-    - ReadWriteOnce
+  storageClassName: ""
   capacity:
-    storage: 10Gi
-  hostPath:
-    path: /network-storage/prometheus/alerts
-    type: DirectoryOrCreate
-  storageClassName: local
+    storage: 1Gi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: 192.168.1.2
+    path: "/volume1/network-storage/prometheus/alerts"
+    readOnly: false
+  mountOptions:
+    - nfsvers=4.1
+    #- hard
+    - noatime
+    # - nodiratime
+    # - tcp
+    # - intr
