--- a/kubernetes/apps/default/pg/pgadmin/ks.yaml
+++ b/kubernetes/apps/default/pg/pgadmin/ks.yaml
@@ -7,7 +7,7 @@ metadata:
     substitution.flux.home.arpa/enabled: "true"
 spec:
   dependsOn:
-    - name: cluster-apps-cloudnative-pg
+    - name: cluster-apps-postgresql
   path: ./kubernetes/apps/default/pg/pgadmin/app
   sourceRef:
     kind: GitRepository
