--- a/kubernetes/apps/default/pg/ks.yaml
+++ b/kubernetes/apps/default/pg/ks.yaml
@@ -1,6 +1,46 @@
 ---
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
-resources:
-  - ./postgresql/ks.yaml
-  - ./pgadmin/ks.yaml
+metadata:
+  name: cluster-apps-postgresql
+  namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
+spec:
+  path: ./kubernetes/apps/default/pg/postgresql
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: postgresql
+      namespace: default
+  interval: 30m
+  prune: false
+  wait: true
+  timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: cluster-apps-pgadmin
+  namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
+spec:
+  dependsOn:
+    - name: cluster-apps-postgresql
+  path: ./kubernetes/apps/default/pg/pgadmin
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: pgadmin
+      namespace: default
+  interval: 30m
+  prune: false
+  wait: true
+  timeout: 5m
