--- a/kubernetes/apps/default/pg/postgresql/pvc-postgres.yaml
+++ b/kubernetes/apps/default/pg/postgresql/pvc-postgres.yaml
@@ -22,17 +22,17 @@ spec:
     # - nodiratime
     # - tcp
     # - intr
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: pvc-postgres
-#   namespace: default
-# spec:
-#   accessModes:
-#     - ReadWriteMany
-#   volumeName: pv-postgres
-#   storageClassName: ""
-#   resources:
-#     requests:
-#       storage: 1Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc-postgres
+  namespace: default
+spec:
+  accessModes:
+    - ReadWriteMany
+  volumeName: pv-postgres
+  storageClassName: ""
+  resources:
+    requests:
+      storage: 1Mi
