--- a/kubernetes/apps/default/pg/postgresql/helmrelease.yaml
+++ b/kubernetes/apps/default/pg/postgresql/helmrelease.yaml
@@ -23,7 +23,8 @@ spec:
     primary:
       persistence:
         enabled: true
-        existingClaim: pvc-postgres
+    volumePermissions:
+      enabled: true
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
