--- a/kubernetes/apps/default/pg/postgresql/helmrelease.yaml
+++ b/kubernetes/apps/default/pg/postgresql/helmrelease.yaml
@@ -33,6 +33,10 @@ spec:
     primary:
       persistence:
         enabled: true
+        existingClaim: pvc-postgres
+      service:
+        externalTrafficPolicy: local
+        clusterIP: 192.168.1.97
     volumePermissions:
       enabled: true
       affinity:
