--- a/kubernetes/apps/default/pg/postgresql/helmrelease.yaml
+++ b/kubernetes/apps/default/pg/postgresql/helmrelease.yaml
@@ -36,7 +36,8 @@ spec:
         existingClaim: pvc-postgres
       service:
         externalTrafficPolicy: local
-        clusterIP: 192.168.1.97
+        clusterIP: "192.168.1.97"
+        type: LoadBalancer
     volumePermissions:
       enabled: true
       affinity:
